Fixed search result highlight alignment

--- a/_content.scss
+++ b/_content.scss
@@ -98,6 +98,10 @@ ul#image-preview-list .description pre{color: $primary;}
 .combined-search-page .thumbnail{border-radius: 50%; margin: 0px}
 .combined-search-page #search input[type=text]{border-radius: 0}
 
+.combined-search-page header mark {
+	vertical-align: middle;
+}
+
 .combined-search-page .search-subscribe-button .add:hover, .combined-search-page .search-subscribe-button .remove:hover{text-decoration: none}
 .combined-search-page .search-subscribe-button .add:focus, .combined-search-page .search-subscribe-button .remove:focus{box-shadow: none;}
 
